test_suite/tests/compile_fail/disciminator_non_tagged_union.rs
use ronky::Exported;

#[derive(Exported)]
#[arri(discriminator = "species")]
enum DiscriminatorsCantBeUsedHere {
    WellOfCourseNot,
    ButLetsStillAddThisTest,
    SomethingLikeThis,
}

fn main() {}
